SECURITY: Remove exposed credentials from documentation

--- a/jasmin-docker/dashboard.html
+++ b/jasmin-docker/dashboard.html
@@ -310,7 +310,7 @@
     <script>
         const GATEWAY_URL = 'http://localhost:8081/proxy';
         const USERNAME = 'admin';
-        const PASSWORD = 'VhYK9Ho8I7cNPWGnypNRwO+PLypHQhStxyMLNiCzobk=';
+        const PASSWORD = 'YOUR_PASSWORD_HERE'; // Replace with actual password
         
         let totalCalls = 0;
         let successCalls = 0;
